--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   sqflite:
-  intl: ^0.18.1
   conditional_builder_null_safety: ^0.0.6
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
@@ -44,7 +43,6 @@ dependencies:
   hexcolor: ^3.0.1
   cached_network_image: ^3.2.3
   shared_preferences: ^2.2.0
-  syncfusion_flutter_gauges: ^23.2.7
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.2.4
   flutter_settings_screens: ^0.3.3-null-safety+2
@@ -74,6 +72,10 @@ dependencies:
   camera: ^0.10.3+1
   settings_ui: ^2.0.2
   flutter_credit_card: ^4.0.1
+  google_maps_flutter: ^2.9.0
+  flutter_localizations:
+    sdk: flutter
+  intl: any
   
 
 
@@ -107,6 +109,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
